2008-10-03  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Util.swg: add Amanda::Util::generate_timestamp
	* common-src/timestamp.c: add comment

2008-10-02  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: add rudimentary ability to read logfiles
	* installcheck/Amanda_DB_Catalog.pl: test it
	* perl/Amanda/Logfile.swg: fix typo

2008-10-01  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3-device.c, device-src/s3.c, device-src/s3.h:
	  Add new property, S3_SSL, to control the use of SSL/TLS when
	  connecting to Amazon S3
	* man/xml-source/amanda-devices.7.xml:
	  document S3_SSL and S3_BUCKET_LOCATION

2008-10-01  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3-util.c: Re-implement s3_hex_encode() to avoid OpenSSL weirdness.

2008-10-01  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amanda.h common-src/conffile.c
	  oldrecover-src/extract_list.c recover-src/extract_list.c
	  server-src/amcheck.c server-src/amflush.c server-src/planner.c:
	  use g_ascii_isspace, as we assume ASCII (for now) and isspace()
	  is affected by locale and encoding settings.  Thanks to Michael
	  Reuland for helping track this down.

2008-09-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.h (xml_optionstr): New prototype.
	* server-src/diskfile.h (clean_dle_str_for_client): Prototype.
	* server-src/amindexd.c: Pass 0 to new argument of xml_optionstr.
	* server-src/amcheck.c: Pass 0 to new argument of xml_optionstr.
	* server-src/planner.c: Pass 0 to new argument of xml_optionstr.
	* server-src/driverio.c: Pass 1 to new argument of xml_optionstr.
	* server-src/dumper.c: Call clean_dle_str_for_client.
	* server-src/diskfile.c (xml_optionstr): Work for ENCRYPT_SERV_CUST.
	* server-src/diskfile.c (clean_dle_str_for_client): New function.
	* restore-src/restore.c: Call clean_dle_str_for_client.
	* common-src/amxml.c: Fix parsing.
	* common-src/amanda.h (match_no_newline): Prototype.